Fixed spacing so main filled the entire space

--- a/src/friends/friends.css
+++ b/src/friends/friends.css
@@ -212,7 +212,7 @@ footer a {
   height: 10%;
 }
 
-#eye1 {
+#eye2 {
   position: absolute;
   background:#2E2A3B;
   border-radius: 50%;
